--- a/index.html
+++ b/index.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Welcome to Pat's Salmon Cookies!</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Pat's Salmon Cookies!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/i-style.css">
 </head>
-
 <body>
-  <header>
-    <h1>Welcome to Pat's Salmon Cookies!</h1>
-  </header>
-
-  <main>
-    <h2><a href="sales.html">Sales</a></h2>
-    <section id="details"></section>
-    <script src="js/app.js"></script>
-  </main>
-  <footer></footer>
+    <header>
+        <h1>Welcome to Pat's Salmon Cookies!</h1>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="sales.html">Sales Data</a>
+    </nav>
+    <main>
+        <div class="img-container">
+            <img src="img/salmon.png" alt="Salmon">
+        </div>
+        <section>
+            <h3>Seattle</h3>
+            <p>Hours Open : 6am-7pm</p>
+            <p>Contact Info : 123-456-7890</p>
+            <p>Location : 2901 3rd Ave #300, Seattle, WA 98121</p>
+            <h3>Tokyo</h3>
+            <p>Hours Open : 6am-7pm</p>
+            <p>Contact Info: 222-222-2222</p>
+            <p>Location: 1 Chome-1-2 Oshiage, Sumida City, Tokyo 131-8634</p>
+            <h3>Dubai</h3>
+            <p>Hours Open : 6am-7pm</p>
+            <p>Contact Info : 333-333-3333</p>
+            <p>Location : 1 Sheikh Mohammed bin Rashid Blvd - Dubai</p>
+            <h3>Paris</h3>
+            <p>Hours Open : 6am-7pm</p>
+            <p>Contact Info : 444-444-4444</p>
+            <p>Location : Champ de Mars, 5 Avenue Anatole France, 75007 Paris</p>
+            <h3>Lima</h3>
+            <p>Hours Open : 6am-7pm</p>
+            <p>Contact Info : 555-555-5555</p>
+            <p>Location : Ca. Gral. Borgoño cuadra 8, Miraflores 15074</p>
+        </section>
+    </main>
+<footer>
+   <p>© 2023 Pat's Salmon Cookies</p> 
+</footer>
 </body>
-
 </html>
