made sales table and improve design

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pat's Salmon Cookies!</title>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
@@ -9,12 +10,13 @@
 </head>
 <body>
     <header>
+        
         <h1>Welcome to Pat's Salmon Cookies!</h1>
     </header>
-    <nav>
+    <nav class="wavy-nav">
         <a href="index.html">Home</a>
         <a href="sales.html">Sales Data</a>
-    </nav>
+      </nav>
     <main>
         <div class="img-container">
             <img src="img/salmon.png" alt="Salmon">
