updated homepage and made a table for sales data

--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
     <link rel="stylesheet" href="css/i-style.css">
 </head>
 <body>
-    <header>
-        
-        <h1>Welcome to Pat's Salmon Cookies!</h1>
+    <header class="header">
+        <img src="/img/SalmonHeader.png" alt="Header Image" class="header-image">
     </header>
     <nav class="wavy-nav">
         <a href="index.html">Home</a>
         <a href="sales.html">Sales Data</a>
       </nav>
     <main>
-        <div class="img-container">
-            <img src="img/salmon.png" alt="Salmon">
         </div>
-        <section>
+        <section class="background-section">
             <h3>Seattle</h3>
             <p>Hours Open : 6am-7pm</p>
             <p>Contact Info : 123-456-7890</p>
