--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <img src="/img/SalmonHeader.png" alt="Header Image" class="header-image">
     </header>
-    <nav class="wavy-nav">
+    <nav>
         <a href="index.html">Home</a>
         <a href="sales.html">Sales Data</a>
       </nav>
