--- a/sales.html
+++ b/sales.html
@@ -12,6 +12,6 @@
   <h1>Salmon-Cookie-Sales</h1>
   <h2><a href="index.html">Home</a></h2>
   <div id="sales-data"></div>
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
