--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/img/SalmonHeader.png" alt="Header Image" class="header-image">
+        <img src="img/SalmonHeader.png" alt="Header Image" class="header-image">
     </header>
     <nav>
         <a href="index.html">Home</a>
