--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/i-style.css">
 </head>
 <body>
+    <body style="background: url('img/bgsalmon.png') no-repeat center center fixed; background-size: cover;">
     <header class="header">
         <img src="img/SalmonHeader.png" alt="Header Image" class="header-image">
     </header>
