--- a/sales.html
+++ b/sales.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Salmon Cookie Sales</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/s-style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Salmon Cookie Sales</title>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/s-style.css">
 </head>
 <body>
-  <h1>Salmon-Cookie-Sales</h1>
-  <h2><a href="index.html">Home</a></h2>
-  <div id="sales-data"></div>
-  <script src="js/app.js"></script>
+  <header class="header">
+    <div class="logo-container">
+        <img src="/img/SalmonHeader.png" alt="Logo" class="logo-image" id="header-logo">
+    </div>
+    <h1>Salmon-Cookie-Sales</h1>
+</header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="sales.html">Sales Data</a>
+        <a href="store.html">Order Form</a>
+        <a href="style-guide.html">Style Guide</a>
+        <a href="order-processing.html">Order Process</a>
+    </nav>
+    <div id="sales-data"></div>
+    <script src="js/app.js"></script>
 </body>
+<footer>
+  <p>© 2024 Pat's Salmon Cookies</p> 
+</footer>
 </html>
