--- a/sales.html
+++ b/sales.html
@@ -13,7 +13,7 @@
     <div class="logo-container">
         <img src="/img/SalmonHeader.png" alt="Logo" class="logo-image" id="header-logo">
     </div>
-    <h1>Salmon-Cookie-Sales</h1>
+    <h1>Salmon Cookie Sales</h1>
 </header>
     <nav>
         <a href="index.html">Home</a>
@@ -23,6 +23,30 @@
         <a href="order-processing.html">Order Process</a>
     </nav>
     <div id="sales-data"></div>
+
+    <!-- New Form for Adding Cookie Stand -->
+    <section>
+        <h2>Add New Cookie Stand</h2>
+        <form id="cookie-stand-form">
+            <fieldset>
+                <legend>New Cookie Stand Information</legend>
+                <label for="location-name">Location Name:</label>
+                <input type="text" id="location-name" name="location-name" required><br><br>
+
+                <label for="min-customers">Minimum Customers:</label>
+                <input type="number" id="min-customers" name="min-customers" required><br><br>
+
+                <label for="max-customers">Maximum Customers:</label>
+                <input type="number" id="max-customers" name="max-customers" required><br><br>
+
+                <label for="avg-cookies">Average Cookies per Customer:</label>
+                <input type="number" id="avg-cookies" name="avg-cookies" step="0.1" required><br><br>
+
+                <button type="submit" class="button">Add Cookie Stand</button>
+            </fieldset>
+        </form>
+    </section>
+
     <script src="js/app.js"></script>
 </body>
 <footer>
