--- a/store.html
+++ b/store.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="/img/SalmonHeader.png" alt="Logo" class="logo-image" id="header-logo">
+            <img src="/img/hdr-slmn.png" alt="Logo" class="logo-image" id="header-logo">
         </div>
     </header>
     <nav>
