--- a/style-guide.html
+++ b/style-guide.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="/img/SalmonHeader.png" alt="Logo" class="logo-image" id="header-logo">
+            <img src="/img/hdr-slmn.png" alt="Logo" class="logo-image" id="header-logo">
         </div>
         <h1>Pat's Salmon Cookies Style Guide</h1>
     </header>
@@ -52,7 +52,7 @@
         <section>
             <h2>Images</h2>
             <p>Logo Image:</p>
-            <img src="/img/SalmonHeader.png" alt="Logo" class="logo-image">
+            <img src="/img/hdr-slmn.png" alt="Logo" class="logo-image">
             <p>Hero Images:</p>
             <div class="hero-container">
                 <img src="/img/salmon.png" alt="Salmon Image" class="hero-image">
