Changed image pathing

--- a/order-processing.html
+++ b/order-processing.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="/img/hdr-slmn.png" alt="Logo" class="logo-image" id="header-logo">
+            <img src="./img/hdr-slmn.png" alt="Logo" class="logo-image" id="header-logo">
         </div>
     </header>
     <nav>
