--- a/sales.html
+++ b/sales.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="logo-container">
-        <img src="/img/hdr-slmn.png" alt="Logo" class="logo-image" id="header-logo">
+        <img src="./img/hdr-slmn.png" alt="Logo" class="logo-image" id="header-logo">
     </div>
     <h1>Salmon Cookie Sales</h1>
 </header>
