--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="/img/hdr-slmn.png" alt="Logo" class="logo-image">
+            <img src="./img/hdr-slmn.png" alt="Logo" class="logo-image">
         </div>
         <div class="hero-container">
             <!-- Images will be added here dynamically -->
