--- a/style-guide.html
+++ b/style-guide.html
@@ -55,13 +55,13 @@
             <img src="./img/hdr-slmn.png" alt="Logo" class="logo-image">
             <p>Hero Images:</p>
             <div class="hero-container">
-                <img src="/img/salmon.png" alt="Salmon Image" class="hero-image">
-                <img src="/img/chinook.jpg" alt="Chinook Image" class="hero-image">
-                <img src="/img/cutter.jpeg" alt="Cutter Image" class="hero-image">
-                <img src="/img/family.jpg" alt="Family Image" class="hero-image">
-                <img src="/img/frosted-cookie.jpg" alt="Frosted Cookie Image" class="hero-image">
-                <img src="/img/shirt.jpg" alt="Shirt Image" class="hero-image">
-                <img src="/img/fish.jpg" alt="Fish Image" class="hero-image">
+                <img src="./img/salmon.png" alt="Salmon Image" class="hero-image">
+                <img src="./img/chinook.jpg" alt="Chinook Image" class="hero-image">
+                <img src="./img/cutter.jpeg" alt="Cutter Image" class="hero-image">
+                <img src="./img/family.jpg" alt="Family Image" class="hero-image">
+                <img src="./img/frosted-cookie.jpg" alt="Frosted Cookie Image" class="hero-image">
+                <img src="./img/shirt.jpg" alt="Shirt Image" class="hero-image">
+                <img src="./img/fish.jpg" alt="Fish Image" class="hero-image">
             </div>
         </section>
     </main>
